# unwinnable

./: .gitignore  Cargo.toml  README.md
assets/sprites/: ball.ron
assets/ui/: game.ron  game_over.ron  main_menu.ron  pause.ron  prompt.ron
config/: display.ron
src/: algorithm.rs  ball.rs  control.rs  game.rs  game_over.rs  init.rs  main.rs  main_menu.rs  parse_input.rs  pause.rs
