[package]
name = "unwinnable"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.3"
log = "0.4.11"
maplit = "1.0.2"
Inflector = "0.11.4"
specs-physics = "0.3.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
